[gd_scene load_steps=37 format=3 uid="uid://so1ta6eubf37"]

[ext_resource type="Texture2D" uid="uid://cu5umakmvgd2" path="res://Scenes/World/tileset.png" id="1_clqkl"]
[ext_resource type="Script" path="res://Actors/Pickable/pickable.gd" id="1_qr3qw"]
[ext_resource type="Shader" path="res://Actors/Pickable/break.gdshader" id="2_f7pja"]
[ext_resource type="FontFile" uid="uid://baavuwxl3ovek" path="res://GUI/m3x6.ttf" id="3_fqoaj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1qxhf"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t0ubq"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rugou"]
radius = 3.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_o2tf3"]
noise_type = 0
seed = 13

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ac3q4"]
generate_mipmaps = false
noise = SubResource("FastNoiseLite_o2tf3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_acrn5"]
shader = ExtResource("2_f7pja")
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_ac3q4")
shader_parameter/dissolve_value = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_yfges"]
atlas = ExtResource("1_clqkl")
region = Rect2(184, 120, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq72j"]
atlas = ExtResource("1_clqkl")
region = Rect2(200, 304, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k7pe"]
atlas = ExtResource("1_clqkl")
region = Rect2(200, 312, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw6pv"]
atlas = ExtResource("1_clqkl")
region = Rect2(200, 320, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_tay6f"]
atlas = ExtResource("1_clqkl")
region = Rect2(48, 288, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5oklu"]
atlas = ExtResource("1_clqkl")
region = Rect2(224, 264, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_krogm"]
atlas = ExtResource("1_clqkl")
region = Rect2(232, 264, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwe1s"]
atlas = ExtResource("1_clqkl")
region = Rect2(216, 264, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8ucu"]
atlas = ExtResource("1_clqkl")
region = Rect2(208, 264, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_uflnw"]
atlas = ExtResource("1_clqkl")
region = Rect2(200, 264, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqili"]
atlas = ExtResource("1_clqkl")
region = Rect2(56, 296, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyljj"]
atlas = ExtResource("1_clqkl")
region = Rect2(112, 112, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq6o4"]
atlas = ExtResource("1_clqkl")
region = Rect2(120, 112, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulmgr"]
atlas = ExtResource("1_clqkl")
region = Rect2(128, 112, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv4r0"]
atlas = ExtResource("1_clqkl")
region = Rect2(200, 232, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5wxh"]
atlas = ExtResource("1_clqkl")
region = Rect2(200, 240, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1afx"]
atlas = ExtResource("1_clqkl")
region = Rect2(200, 248, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ledj"]
atlas = ExtResource("1_clqkl")
region = Rect2(64, 288, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_tegqa"]
atlas = ExtResource("1_clqkl")
region = Rect2(72, 288, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_qxc61"]
animations = [{
"frames": [SubResource("AtlasTexture_yfges")],
"loop": true,
"name": &"arrow",
"speed": 5.0
}, {
"frames": [SubResource("AtlasTexture_kq72j"), SubResource("AtlasTexture_7k7pe"), SubResource("AtlasTexture_iw6pv")],
"loop": true,
"name": &"bomb",
"speed": 1.0
}, {
"frames": [SubResource("AtlasTexture_tay6f")],
"loop": true,
"name": &"breakable",
"speed": 5.0
}, {
"frames": [SubResource("AtlasTexture_5oklu"), SubResource("AtlasTexture_krogm"), SubResource("AtlasTexture_dwe1s"), SubResource("AtlasTexture_x8ucu"), SubResource("AtlasTexture_uflnw"), SubResource("AtlasTexture_oqili")],
"loop": true,
"name": &"container",
"speed": 5.0
}, {
"frames": [SubResource("AtlasTexture_pyljj"), SubResource("AtlasTexture_eq6o4"), SubResource("AtlasTexture_ulmgr")],
"loop": true,
"name": &"standard",
"speed": 5.0
}, {
"frames": [SubResource("AtlasTexture_uv4r0"), SubResource("AtlasTexture_a5wxh"), SubResource("AtlasTexture_k1afx"), SubResource("AtlasTexture_1ledj"), SubResource("AtlasTexture_tegqa")],
"loop": true,
"name": &"treasure",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_lonqt"]
offsets = PackedFloat32Array(0.00953895, 0.227345, 0.446741, 1)
colors = PackedColorArray(1, 0.366667, 0, 1, 1, 0.916667, 0, 1, 0, 0, 0, 1, 0.45, 0.45, 0.45, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fo2kl"]
gradient = SubResource("Gradient_lonqt")

[sub_resource type="Curve" id="Curve_y8h6l"]
_data = [Vector2(0.0339734, 0), 0.0, 0.0, 0, 0, Vector2(0.79616, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_vdpow"]
curve = SubResource("Curve_y8h6l")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_w6dpd"]
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 60.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 40.0
damping_max = 80.0
scale_min = 4.0
scale_max = 8.0
scale_curve = SubResource("CurveTexture_vdpow")
color_ramp = SubResource("GradientTexture1D_fo2kl")

[sub_resource type="CircleShape2D" id="CircleShape2D_gnaic"]
radius = 32.0

[node name="Pickable" type="RigidBody2D" node_paths=PackedStringArray("sprite", "standard_body", "blast_radius", "timer", "explosion", "debug") groups=["object"]]
collision_layer = 8
collision_mask = 4
can_sleep = false
lock_rotation = true
linear_damp = 1.0
script = ExtResource("1_qr3qw")
sprite = NodePath("AnimatedSprite2D")
standard_body = NodePath("Body")
blast_radius = NodePath("ExplosionRadius/ExplosionRadiusCollision")
timer = NodePath("Timer")
explosion = NodePath("GPUParticles2D")
debug = NodePath("Label")

[node name="ExplosionRadius" type="Area2D" parent="." groups=["bomb_radius"]]

[node name="ExplosionRadiusCollision" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource("CircleShape2D_1qxhf")
debug_color = Color(0.972549, 0.168627, 0, 0.419608)

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t0ubq")

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0

[node name="AreaDetectorCollision" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_rugou")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_acrn5")
frames = SubResource("SpriteFrames_qxc61")
animation = &"breakable"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 128
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_w6dpd")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = 4.0
offset_right = 20.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_fqoaj")
horizontal_alignment = 1

[node name="AffectedByBlastRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AffectedByBlastRadius"]
shape = SubResource("CircleShape2D_gnaic")
debug_color = Color(0.478431, 0.564706, 0.466667, 0.0431373)

[connection signal="area_entered" from="Detector" to="." method="_on_detector_area_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="area_entered" from="AffectedByBlastRadius" to="." method="_on_affected_by_blast_radius_area_entered"]
